<resources>
    <string name="app_name">Client Control App</string>
    <string name="addClient">Add a New Client</string>
    <string name="ModifyClient">Modify Client</string>
    <string name="SelectClient">Select Client</string>
    <string name="reports">Reports"</string>
    <string name="system_prompt">Select System Type</string>
    <string-array name="system_types">
        <item>PayLite</item>
        <item>PayMini</item>
        <item>PaySlip</item>
        <item>AgriPay</item>
        <item>SBLITE</item>
        <item>SBPAY</item>
        <item>SBASE</item>
        <item>SBPOS</item>
        <item>SBOFFICE</item>
        <item>Not Set</item>
        <item>All Systems</item>
    </string-array>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_ConsultantListActivity">Active Consultants</string>

    <string name="btnBack">Back</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnSearch">Search</string>
    <string name="btnModify">Update</string>
    <string name="btnAdd">Add</string>

    <string name="etSerialNo">SerialNo</string>
    <string name="etClientName">Client Name</string>
    <string name="etAddress">Postal Address</string>
    <string name="etContactNumber">Contact Number</string>
    <string name="etContactName">Contact Name</string>
    <string name="etEmailAddress">Email Address</string>
    <string name="etPayeNo">Paye Number</string>
    <string name="etSdlNo">Sdl Number</string>
    <string name="etUifNo">Uif Number</string>
    <string name="etExpiryDate">Expiry Date</string>
    <string name="etAnnualLicence">Annual Licence</string>
    <string name="etVolume">Volume</string>
    <string name="etInstallPin">Install Pin</string>
    <string name="etUserCode">User Code</string>

    <string name="tvConsultant">Consultant</string>
    <string name="tvSystemType">System Type</string>
    <string name="tvSearch">Search</string>
    <string name="ckPaid">Paid</string>
    <string name="ckInCloud">In Cloud</string>
    <string name="ckPdfModule">Pdf Module</string>
    <string name="tvFromDate">From Date</string>
    <string name="tvToDate">To Date</string>
    <string name="title_activity_login">Client Control - Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_reports">ReportsActivity</string>
    <string name="action_settings">Settings</string>
</resources>
