<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_detail_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.edcowpar.clientcontrol.ItemDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ScrollView01"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btGroup"
        android:layout_below="@+id/app_bar"
        android:layout_marginBottom="8dp">

        <RelativeLayout
            android:id="@+id/DataLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_SerialNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true">

                <EditText
                    android:id="@+id/etSerialNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="SerialNo"
                    android:inputType="number"
                    android:selectAllOnFocus="true"
                    android:text="@string/etSerialNo" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_ClientName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/input_layout_SerialNo">

                <EditText
                    android:id="@+id/etClientName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Client Name"
                    android:inputType="textPersonName"
                    android:selectAllOnFocus="true"
                    android:text="@string/etClientName"
                    android:textAllCaps="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_Address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/input_layout_ClientName">

                <EditText
                    android:id="@+id/etAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/etAddress"
                    android:inputType="textMultiLine|textCapCharacters"
                    android:selectAllOnFocus="true"
                    android:text="@string/etAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_Phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/input_layout_Address">

                <EditText
                    android:id="@+id/etContactNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Contact Number"
                    android:inputType="phone"
                    android:selectAllOnFocus="true"
                    android:text="@string/etContactNumber" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_ContactName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/input_layout_Phone">

                <EditText
                    android:id="@+id/etContactName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Contact Name"
                    android:inputType="textPersonName"
                    android:selectAllOnFocus="true"
                    android:text="@string/etContactName"
                    android:textAllCaps="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/input_layout_ContactName">

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Email Address"
                    android:inputType="textEmailAddress"
                    android:selectAllOnFocus="true"
                    android:text="@string/etEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_Paye"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/input_layout_Email">

                <EditText
                    android:id="@+id/etPayeNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/etPayeNo"
                    android:inputType="number"
                    android:selectAllOnFocus="true"
                    android:text="@string/etPayeNo" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_SdlNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/input_layout_Paye">

                <EditText
                    android:id="@+id/etSdlNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/etSdlNo"
                    android:inputType="number"
                    android:selectAllOnFocus="true"
                    android:text="@string/etSdlNo" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_UifNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/input_layout_SdlNo">

                <EditText
                    android:id="@+id/etUifNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/etUifNo"
                    android:inputType="number"
                    android:selectAllOnFocus="true"
                    android:text="@string/etUifNo" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_SystemType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/input_layout_UifNo">

                <TextView
                    android:id="@+id/tvSystemType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/spSystemType"
                    android:text="System Type" />

                <Spinner
                    android:id="@+id/spSystemType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/system_types"
                    android:prompt="@string/system_prompt" />

            </android.support.design.widget.TextInputLayout>

            <View
                android:id="@+id/input_layout_h1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/input_layout_SystemType"
                android:background="@android:color/darker_gray" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_Consultant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/input_layout_h1">

                <TextView
                    android:id="@+id/tvConsultant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/spConsultant"
                    android:text="Consultant" />

                <Spinner
                    android:id="@+id/spConsultant"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/system_types"
                    android:prompt="@string/system_prompt" />

            </android.support.design.widget.TextInputLayout>

            <View
                android:id="@+id/input_layout_h2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/input_layout_Consultant"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_ExpiryDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/input_layout_h2"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/etExpiryDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/etExpiryDate"
                    android:inputType="none"
                    android:onClick="showDatePickerDialog"
                    android:text="@string/etExpiryDate" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_AnnualLicence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/input_layout_ExpiryDate">

                <EditText
                    android:id="@+id/etAnnualLicence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/etAnnualLicence"
                    android:inputType="numberDecimal"
                    android:selectAllOnFocus="true"
                    android:text="@string/etAnnualLicence" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_Volume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/input_layout_AnnualLicence">

                <EditText
                    android:id="@+id/etVolume"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/etVolume"
                    android:inputType="number"
                    android:selectAllOnFocus="true"
                    android:text="@string/etVolume" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_Paid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/input_layout_Volume">

                <CheckBox
                    android:id="@+id/ckPaid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ckPaid" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_PdfModule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/input_layout_Paid">

                <CheckBox
                    android:id="@+id/ckPdfModule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ckPdfModule" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_InCloud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/input_layout_PdfModule">

                <CheckBox
                    android:id="@+id/ckInCloud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ckInCloud" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_InstallPin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/input_layout_InCloud">

                <EditText
                    android:id="@+id/etInstallPin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/etInstallPin"
                    android:inputType="textPersonName"
                    android:text="@string/etInstallPin" />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/btGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btnModify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/btnModify" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/btnBack" />

    </RelativeLayout>

</RelativeLayout>
