<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.edcowpar.clientcontrol.MainActivity">


    <ImageButton
        android:id="@+id/newClient"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:clickable="true"
        android:contentDescription="@string/addClient"
        android:onClick="AddClient"
        android:scaleType="fitCenter"
        android:src="@drawable/manwoman"
        />

    <TextView
        android:id="@+id/label1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/newClient"
        android:layout_alignStart="@+id/newClient"
        android:layout_below="@+id/newClient"
        android:text="New Client"
        android:textSize="20sp" />

    <ImageButton
        android:id="@+id/modifyClient"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignTop="@+id/newClient"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:contentDescription="@string/ModifyClient"
        android:onClick="SelectClient"
        android:scaleType="fitCenter"
        android:src="@drawable/manwoman" />

    <TextView
        android:id="@+id/label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/modifyClient"
        android:layout_below="@+id/modifyClient"
        android:layout_margin="10dp"
        android:text="Modify Client"
        android:textSize="20sp"
         />

    <ImageButton
        android:id="@+id/btnReport"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/label1"
        android:layout_alignStart="@+id/label1"
        android:layout_centerVertical="true"
        android:clickable="true"
        android:contentDescription="@string/reports"
        android:scaleType="fitCenter"
        android:src="@drawable/reports1" />

    <TextView
        android:id="@+id/label3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/label2"
        android:layout_alignStart="@+id/label2"
        android:layout_centerVertical="true"
        android:text="Expiry Dates"
        android:textSize="20sp" />

</RelativeLayout>
